<resources>
    <string name="app_name" translatable="false">Arrive</string>
    <string name="mi_settings">Settings</string>
    <string name="mi_places">Places</string>
    <string name="mi_about">About</string>
    <string name="mi_rate">Rate app</string>
    <string name="pref_typeMap">Type Map</string>
    <string name="pref_AlarmCategory">Alarm settings</string>
    <string name="pref_Vibro">Vibration</string>
    <string name="pref_loopPlay">Loop Play</string>
    <string name="pref_timePlays">Play time</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="check_notification_text">Is tracking the distance to the target</string>
    <string name="stop_check">Stop tracking</string>
    <string name="alarm_notification_text">Arrive!!!</string>
    <string name="dismiss">Dismiss</string>
    <string name="need_location">Arrive need you permission to get location.</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_getPermissions">Get permissions</string>
    <string name="ifDeniedPermission">If you have previously denied permission</string>
    <string name="action_openApplicationSettings">Open application settings</string>
    <string name="permissionsNotReceivedMassage">Permissions not received massage</string>
</resources>
